name:                hsLEMS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/hsLEMS#readme
license:             BSD3
license-file:        LICENSE
author:              Gautham Ganapathy
maintainer:          gautham@lisphacker.org
copyright:           Gautham Ganapathy (gautham@lisphacker.org)
category:            Science/Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hsLEMS
  hs-source-dirs:      prog-src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers >= 0.5.7.1

library
  hs-source-dirs:      src
  exposed-modules:     Language.NeuroML.LEMS.Parser, Language.NeuroML.LEMS.Parser.ParseTree, Language.NeuroML.LEMS.Parser.XMLParser, Language.NeuroML.LEMS.Semantics.Model, Language.NeuroML.LEMS.Semantics.Analyzer
  build-depends:       base >= 4.7 && < 5, containers >= 0.5.7.1, directory >= 1.3.0.0, hxt >= 9.0.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/lisphacker/hsLEMS
