name:                hsLEMS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/hsLEMS#readme
license:             BSD3
license-file:        LICENSE
author:              Gautham Ganapathy
maintainer:          gauthamg@gmail.com
copyright:           (c) Gautham Ganapathy, 2018
category:            Science/Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lemsc
  hs-source-dirs:      prog-src
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , hsLEMS
                     , optparse-applicative
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Language.NeuroML.LEMS.Errors
                     , Language.NeuroML.LEMS.Monad
                     , Language.NeuroML.LEMS.Parser
                     , Language.NeuroML.LEMS.Parser.ParseTree
                     , Language.NeuroML.LEMS.Parser.XMLParser
                     , Language.NeuroML.LEMS.Semantics.Analysis
                     , Language.NeuroML.LEMS.Semantics.Expression
                     , Language.NeuroML.LEMS.Semantics.Model
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , directory >= 1.3.0.0
                     , extra >= 1.6.14
                     , hxt >= 9.0.0
                     , lens
                     , mtl
                     , protolude
                     , text >= 1.2.2.1
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: git://github.com/lisphacker/hsLEMS
